--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         
                     </div>
                     <div class="col-lg-6">
-                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.png">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/ar.png">
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item bg-light rounded">
                             <div class="text-center border-bottom p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-2.jpg" alt="">
+                                <img class="img-fluid rounded-circle mb-4" src="img/ab.png" alt="">
                                 <h5>M.ABDULLAH ALI</h5>
                                 <span>MY BEST FRINED</span>
                             </div>
