--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
-                               
                                 <a href="testimonial.html" class="dropdown-item">NOTES</a>
+                                <a href="404.html" class="dropdown-item">VIDEO LECTURES</a>
                                
                             </div>
                         </div>
