--- a/service.html
+++ b/service.html
@@ -63,7 +63,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                
-                                <a href="testimonial.html" class="dropdown-item">NOTES</a>
+                                <a href="Testimonial.html" class="dropdown-item">NOTES</a>
                                 <a href="404.html" class="dropdown-item">VIDEO LECTURES</a>
                             </div>
                         </div>
