--- a/Testimonial.html
+++ b/Testimonial.html
@@ -62,7 +62,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
-                                   <a href="testimonial.html" class="dropdown-item">NOTES</a>
+                                   <a href="Testimonial.html" class="dropdown-item">NOTES</a>
                                 <a href="404.html" class="dropdown-item">VIDEO LECTURES</a>
                             </div>
                         </div>
