--- a/Testimonial.html
+++ b/Testimonial.html
@@ -77,6 +77,7 @@
                     <div class="row g-5 py-5">
                         <div class="col-12 text-center">
                             <h1 class="text-white animated slideInDown">NOTES</h1>
+				<span> <b><i>REMEMBER THAT NOTES WILL TAKE 2 MIN TO OPEN SO BE PATIENCE</i></b> </span>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
