--- a/404.html
+++ b/404.html
@@ -94,7 +94,7 @@
 
 
         <!-- 404 Start -->
-       
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=6KhSOhw5WmgnUGvJ&amp;list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>WEB DEVELOPMENT BASIC COURSE</iframe>
         <!-- 404 End -->
         
 
