--- a/404.html
+++ b/404.html
@@ -94,8 +94,12 @@
 
 
         <!-- 404 Start -->
+	    <p><B>FULL WEB DEVELOPMENT BASIC COURSE</B></p>
        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=6KhSOhw5WmgnUGvJ&amp;list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>WEB DEVELOPMENT BASIC COURSE</iframe>
-        <!-- 404 End -->
+       <p><B>FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</B></p>
+	   <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=MFnIfCkLSAHM6eew&amp;list=PLZ8-rdXtysy5zLdQ6uX7VDQFF5koiGLe7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</iframe>
+	    
+	    <!-- 404 End -->
         
 
         <!-- Footer Start -->
