--- a/404.html
+++ b/404.html
@@ -95,46 +95,8 @@
 
 
         <!-- 404 Start -->
-	   div class="overlay"></div>
-
-<div class="text">
-	<div class="wrapper">
-		<div id="L" class="letter">BASIC</div>
-		<div class="shadow">BASIC</div>
-	</div>
-	<div class="wrapper">
-		<div id="I" class="letter">WEB</div>
-		<div class="shadow">WEB</div>
-	</div>
-	<div class="wrapper">
-		<div id="G" class="letter">DEVELOPMENT</div>
-		<div class="shadow">DEVELOPMENT</div>
-	</div>
-	<div class="wrapper">
-		<div id="H" class="letter">COURSES</div>
-		<div class="shadow">COURSES</div>
-	</div>
-	<div class="wrapper">
-		<div id="T" class="letter">IN</div>
-		<div class="shadow">IN</div>
-	</div>
-	<div class="wrapper">
-		<div id="N" class="letter">HI</div>
-		<div class="shadow">HI</div>
-	</div>
-	<div class="wrapper">
-		<div id="E" class="letter">N</div>
-		<div class="shadow">N</div>
-	</div>
-	<div class="wrapper">
-		<div id="S" class="letter">D</div>
-		<div class="shadow">D</div>
-	</div>
-	<div class="wrapper">
-		<div id="Stwo" class="letter">I</div>
-		<div class="shadow">I</div>
-	</div>
-</div>
+  <p style="color:BLUE; "><B>BASIC COURSE OF WEB DEVELOPMENT</B></p>
+	
        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=6KhSOhw5WmgnUGvJ&amp;list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">WEB DEVELOPMENT BASIC COURSE</iframe>
        <p><B>FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</B></p>
 	   <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=MFnIfCkLSAHM6eew&amp;list=PLZ8-rdXtysy5zLdQ6uX7VDQFF5koiGLe7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</iframe>
