--- a/404.html
+++ b/404.html
@@ -95,12 +95,15 @@
 
 
         <!-- 404 Start -->
-  <p style="color:BLUE; font-size:5pc"><B>BASIC COURSE OF WEB DEVELOPMENT</B></p>
+ <div class="bloc">
+	  <p style="color:BLUE; font-size:3pc"><B>BASIC COURSE OF WEB DEVELOPMENT</B></p>
 	
        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=6KhSOhw5WmgnUGvJ&amp;list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">WEB DEVELOPMENT BASIC COURSE</iframe>
+ </div>
+	    <div class="bloc">
        <p><B>FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</B></p>
 	   <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=MFnIfCkLSAHM6eew&amp;list=PLZ8-rdXtysy5zLdQ6uX7VDQFF5koiGLe7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</iframe>
-	    
+	    </div>
 	    <!-- 404 End -->
         
 
