--- a/404.html
+++ b/404.html
@@ -96,7 +96,7 @@
 
         <!-- 404 Start -->
  <div class="bloc">
-	  <p style="color:BLUE; font-size:3pc"><B>BASIC COURSE OF WEB DEVELOPMENT</B></p>
+	  <p style="color:BLUE; "><B>BASIC COURSE OF WEB DEVELOPMENT</B></p>
 	
        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=6KhSOhw5WmgnUGvJ&amp;list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">WEB DEVELOPMENT BASIC COURSE</iframe>
  </div>
