--- a/404.html
+++ b/404.html
@@ -107,7 +107,7 @@
  </div>
 	    <div class="rainbow">
        <p style="color:BLUE; font-size: 20px ;"><B>FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</B></p>
-	   <iframe width="390" height="310" src="https://www.youtube.com/embed/videoseries?si=MFnIfCkLSAHM6eew&amp;list=PLZ8-rdXtysy5zLdQ6uX7VDQFF5koiGLe7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</iframe>
+	   <iframe style="border-width:2px; border-color: purple; " width="390" height="310" src="https://www.youtube.com/embed/videoseries?si=MFnIfCkLSAHM6eew&amp;list=PLZ8-rdXtysy5zLdQ6uX7VDQFF5koiGLe7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</iframe>
 	    </div>
 	    <!-- 404 End -->
         
