--- a/404.html
+++ b/404.html
@@ -90,7 +90,7 @@
                                 </ol>
                             </nav>
 				<span><p style="color: white ;"><b>YOU CAN WATCH VIDEOES IN LINE AUTOMAIC NEXT VIDEO WILL PLAY ON BUT IF YOU WANT TO ACCES ALL PLAYLIST ON THE VIDEO TOP YOU WILL SEE LINES WITH ARROW CLICK ON IT.THE COURSES ARE TAKEN FROM YOUTUBE CREATOR SO THATS ONLY A ROUTE WEBSITE YOU CAN ACCES THER CHANNELS,THANKS </b></p></span>
-				  <img src="af.png" widht = "350" height="290">
+				  <img src="af.png" height="200">
                         </div>
                     </div>
                 </div>
