--- a/404.html
+++ b/404.html
@@ -103,10 +103,10 @@
  <div class="rainbow">
 	  <p style="color:BLUE; font-size: 20px ;"><B>BASIC COURSE OF WEB DEVELOPMENT</B></p>
 	
-       <iframe width="390" height="310" src="https://www.youtube.com/embed/videoseries?si=6KhSOhw5WmgnUGvJ&amp;list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">WEB DEVELOPMENT BASIC COURSE</iframe>
+       <iframe style=" border-style: solid ; border-width:4px; border-color: purple; " width="390" height="310" src="https://www.youtube.com/embed/videoseries?si=6KhSOhw5WmgnUGvJ&amp;list=PLu0W_9lII9agiCUZYRsvtGTXdxkzPyItg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">WEB DEVELOPMENT BASIC COURSE</iframe>
  </div>
 	    <div class="rainbow">
-       <p style="color:BLUE; font-size: 20px ;"><B>FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</B></p>
+       <p style="color:BLUE; font-size: 20px ;"><B>FULL ADVANCED COURSE OF WEB DEVELOPMENT</B></p>
 	   <iframe style=" border-style: solid ; border-width:4px; border-color: purple; " width="390" height="310" src="https://www.youtube.com/embed/videoseries?si=MFnIfCkLSAHM6eew&amp;list=PLZ8-rdXtysy5zLdQ6uX7VDQFF5koiGLe7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style = "display: inline-block ; ">FULL ADVANCED ZERO TO HERO COURSE OF WEB DEVELOPMENT</iframe>
 	    </div>
 	    <!-- 404 End -->
