--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+	<meta name="google-site-verification" content="kX4bWDgv47F1Z6Xu2IuNfDrZMczTXEor1L7suR-QSo0" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
